feat(core): deepen quest authoring model